# OpenGLGame

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  generateProjects.sh  imgui.ini  premake5.lua  run.sh
Confuse/: Makefile
Confuse/src/: CEpch.h  Confuse.h
Confuse/src/Confuse/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCode.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCode.h  Window.h
Confuse/src/Confuse/Core/: Timestep.h
Confuse/src/Confuse/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Confuse/src/Confuse/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Confuse/src/Confuse/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
Confuse/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Confuse/src/Platform/linux/: LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
Sandbox/: Makefile
Sandbox/src/: SandboxApp.cpp
shaders/: Standart.shader  triangles.shader
src/: Shader.cpp  Shader.h  Texture.cpp  VertexArray.cpp  Window.cpp  Window.h  main.cpp  pch.h
src/Core/: Window.h
src/Renderer/: Buffer.cpp  Buffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VertexArray.h
tests/: Test.cpp  Test.h  TestSkyboxColor.cpp  TestSkyboxColor.h  TestTexture2D.cpp  TestTexture2D.h
